<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <com.example.tetrisandroid.ui.game.renderer.MySurfaceView
        android:id="@+id/MySurfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="120dp"
        android:text="@string/buttonLeft"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintWidth_percent="0.18"
        />
    <Button
        android:id="@+id/buttonDown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="11sp"
        android:text="@string/buttonDown"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintStart_toEndOf="@id/buttonLeft"
        app:layout_constraintTop_toBottomOf="@id/buttonLeft"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintWidth_percent="0.18"
        />
    <Button
        android:id="@+id/buttonRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="11sp"
        android:text="@string/buttonRight"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintStart_toEndOf="@id/buttonDown"
        app:layout_constraintBottom_toTopOf="@id/buttonDown"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintWidth_percent="0.18"
        />
    <Button
        android:id="@+id/buttonUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="10sp"
        android:text="@string/buttonUp"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintStart_toStartOf="@id/buttonDown"
        app:layout_constraintBottom_toTopOf="@id/buttonLeft"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintWidth_percent="0.18"
        />
    <Button
        android:id="@+id/buttonRotate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="14sp"
        android:text="@string/buttonRotate"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintStart_toEndOf="@id/buttonRight"
        app:layout_constraintBottom_toBottomOf="@id/buttonRight"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="45dp"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintWidth_percent="0.26"
        />
    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="13sp"
        android:text="@string/buttonReset"
        android:textColor="@color/white"
        android:fontFamily="@font/icomoon"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintStart_toStartOf="@id/buttonRotate"
        app:layout_constraintBottom_toTopOf="@id/buttonRotate"
        android:layout_marginBottom="120dp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.12"
        />
    <Button
        android:id="@+id/buttonPause"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:text="@string/buttonPause"
        android:textColor="@color/white"
        android:fontFamily="@font/icomoon"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintStart_toEndOf="@id/buttonReset"
        app:layout_constraintTop_toTopOf="@id/buttonReset"
        android:layout_marginStart="10dp"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.12"
        />

</androidx.constraintlayout.widget.ConstraintLayout>